<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:scrollbarStyle="outsideOverlay"
    app:layout_scrollFlags="scroll|enterAlways"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">


    <TextView
        android:textColor="@color/black"
        android:layout_marginLeft="6dp"
        android:id="@+id/overViewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="7dp"
        android:textStyle="bold"
        android:gravity="start"
        android:textSize="24sp"
        android:text="@string/trailors"
        android:textColor="@color/black"
        android:layout_marginStart="17.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17.5dp"
        android:layout_marginRight="17.5dp"
        android:layout_marginTop="5dp"
        android:background="#1d000000" />

<android.support.v7.widget.RecyclerView
    android:layout_marginLeft="6dp"
    android:id="@+id/trailorsRecycleView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

</android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="start"
        android:text="@string/reviews"
        android:textColor="@color/black"
        android:layout_marginStart="17.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17.5dp"
        android:layout_marginRight="17.5dp"
        android:layout_marginTop="5dp"
        android:background="#1d000000" />

    <android.support.v7.widget.RecyclerView
        android:layout_marginLeft="6dp"
        android:id="@+id/recycleViewReviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/noReviewsText"
        android:visibility="gone"
     android:gravity="center"
    android:layout_marginTop="10dp"
    android:textStyle="bold"
    android:textSize="14sp"
    android:text="@string/no_reviews"
    android:textColor="@color/black"
    android:layout_marginLeft="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />


</LinearLayout>