<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/plan_cardviewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="8dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.project.imperialcreation.moviekotlin.MoviesFragment">


            <LinearLayout
                android:id="@+id/popularLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/popular"
                    android:textColor="@color/gray" />

                </LinearLayout>


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center|end">

                    <ImageView
                        android:scaleType="centerInside"
                        android:id="@+id/popularImageViewArrow"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/arrow_close" />
                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/popularRecycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="17.5dp"
                android:layout_marginRight="17.5dp"
                android:background="#1d000000" />


            <LinearLayout
                android:id="@+id/upComingLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/up_coming"
                        android:textColor="@color/gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center|end">


                    <ImageView
                        android:id="@+id/upComingImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerInside"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/arrow_close" />

                </LinearLayout>

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/upComingRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

            </android.support.v7.widget.RecyclerView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="17.5dp"
                android:layout_marginRight="17.5dp"
                android:background="#1d000000" />


            <LinearLayout
                android:id="@+id/nowPlayingLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/now_playing"
                        android:textColor="@color/gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center|end">


                    <ImageView
                        android:id="@+id/nowPlayingImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerInside"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/arrow_close" />

                </LinearLayout>

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/nowPlayingRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

            </android.support.v7.widget.RecyclerView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="17.5dp"
                android:layout_marginRight="17.5dp"
                android:background="#1d000000" />


            <LinearLayout
                android:id="@+id/topRatedLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/top_rated"
                    android:textColor="@color/gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center|end">


                    <ImageView
                        android:id="@+id/topRatedImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerInside"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/arrow_close" />

                    </LinearLayout>

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/topRatedRecycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

            </android.support.v7.widget.RecyclerView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="17.5dp"
                android:layout_marginRight="17.5dp"
                android:background="#1d000000" />

            <LinearLayout
                android:id="@+id/latestLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/latest"
                        android:textColor="@color/gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center|end">


                    <ImageView
                        android:id="@+id/latestImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerInside"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/arrow_close" />

                </LinearLayout>

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/latestRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

            </android.support.v7.widget.RecyclerView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="17.5dp"
                android:layout_marginRight="17.5dp"
                android:background="#1d000000" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>
